# epl

./: Pipfile  dev_epl.db  pyproject.toml
dbt/: check_csv.ipynb  csv_check.py  dbt_project.yml
dbt/models/staging/: stg_pl_combined_years.sql  test_file.sql
dbt/models/test/: simple_model.sql
dbt/scripts/: load_csvs.py  load_csvs_dev.py  load_csvs_prod.py
epl/: dbt_project.yml
