[project]
name = "epl"
version = "0.1.0"
description = ""
authors = [
    {name = "T Vaughan"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dbt-sqlite (>=1.9.1,<2.0.0)",
    "apache-airflow[sqlite] (==2.8.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
